# LLM_project_structure

./: .gitignore  README.md  Test.md  pyproject.toml  requirements.txt  setup.sh
app/: main.py
app/api/v1/: assistant_request.py  outbound.py
app/core/: config.py
app/llm_agents/: llm.py
app/logging/: logger.py
app/services/: vapi_assistant_generator.py  vapi_outbound.py  vapi_utils.py
app/services/user/: records.py  types.py
src/: config.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/request/: __init__.py  routes.py
src/api/v1/request/vapi/: __init__.py  outbound.py
src/service/util/: constants.py
