[project]
name = "llm_project_structure"
version = "0.1.0"
description = "Reusable framework for LLM-based fast demos"
authors = [
    { name = "xin li", email = "zjulixin@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"
vapi-server-sdk = "^1.5.0"

packages = [{ include = "app" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "google-generativeai",
    "python-dotenv",
    "pyngrok",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "loguru"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false